--- a/simple_react/package.json
+++ b/simple_react/package.json
@@ -18,8 +18,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-appwrite": "^0.20.0",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-url-polyfill": "^3.0.0"
   },
   "private": true
 }
